[gd_scene load_steps=5 format=3 uid="uid://ckx2jlpj222w2"]

[ext_resource type="Script" uid="uid://bna1qw1nrcjr0" path="res://scripts/main_menu_key.gd" id="1_j8mk6"]
[ext_resource type="Texture2D" uid="uid://co2djgpqbta0a" path="res://assets/Key/Shade.png" id="1_xy63v"]
[ext_resource type="Texture2D" uid="uid://chvr2spxjabet" path="res://assets/MainMenuKeys/S.png" id="2_j8mk6"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xy63v"]
size = Vector2(128, 124)

[node name="MainMenuKey" type="Node2D"]
script = ExtResource("1_j8mk6")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(64, 64)
shape = SubResource("RectangleShape2D_xy63v")

[node name="Shade" type="Sprite2D" parent="."]
position = Vector2(64, 67)
scale = Vector2(3.19475, 3.2)
texture = ExtResource("1_xy63v")

[node name="Key" type="Sprite2D" parent="."]
position = Vector2(64, 64)
scale = Vector2(3.2, 3.2)
texture = ExtResource("2_j8mk6")

[connection signal="input_event" from="Area2D" to="." method="_on_area_2d_input_event"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
